welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:13: error: ')' expected but '(' found.
	(droite());
        ^Program:16: error: illegal start of statement
	)
        ^